tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__roundtrip_bound_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: bound_bytes
---
[
    2,
    14,
    0,
    114,
    111,
    117,
    110,
    100,
    116,
    114,
    105,
    112,
    58,
    97,
    117,
    116,
    104,
    9,
    0,
    97,
    117,
    116,
    104,
    46,
    116,
    101,
    115,
    116,
    1,
    0,
    0,
    9,
    0,
    3,
    231,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    178,
    235,
    34,
    164,
    109,
    190,
    26,
    46,
    57,
    18,
    193,
    145,
    197,
    34,
    114,
    40,
    38,
    7,
    146,
    50,
    137,
    242,
    103,
    62,
    161,
    130,
    87,
    246,
    111,
    215,
    174,
]
