tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__roundtrip_original_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: discharge_bytes
---
[
    2,
    14,
    0,
    114,
    111,
    117,
    110,
    100,
    116,
    114,
    105,
    112,
    58,
    97,
    117,
    116,
    104,
    9,
    0,
    97,
    117,
    116,
    104,
    46,
    116,
    101,
    115,
    116,
    1,
    0,
    0,
    9,
    0,
    3,
    231,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    89,
    122,
    183,
    174,
    218,
    233,
    77,
    47,
    203,
    249,
    244,
    111,
    152,
    212,
    248,
    50,
    9,
    159,
    124,
    245,
    64,
    113,
    74,
    151,
    30,
    17,
    1,
    193,
    28,
    171,
    159,
    100,
]
